Bug 4990 - Fix for VIA modeswitching crash
Summary: Fix for VIA modeswitching crash
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Via (show other bugs)
Version: 6.99.99.901 (7.0 RC1)
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: Thomas Hellström
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-11-08 07:16 UTC by Joris van Rantwijk
Modified: 2005-11-08 06:50 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Joris van Rantwijk 2005-11-08 07:16:35 UTC
When switching video modes (Ctrl+/Ctrl-) using the VIA driver with DRI disabled,
 my screen goes black and the system is locked up completely.

This is due to a problem in xfree86/drivers/via/via_driver.c, line 2295 (current
CVS). The function VIASwitchMode does an unconditional call to kickVblank(),
while kickVblank will crash the server when not in DRI mode.

I solved this problem on my system by moving the call to kickVblank one line
down so that it is only called when directRenderingEnabled is true.
Comment 1 Luc Verhaegen 2005-11-08 07:32:59 UTC
Unconditionally depending on the existence of pVia->pDRIInfo->devPrivate _again_.
I've now officially lost count.
Comment 2 Luc Verhaegen 2005-11-08 07:33:55 UTC
Assigning to author.
Comment 3 Thomas Hellström 2005-11-09 01:50:48 UTC
Commited. Thanks.

/Thomas


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.