Bug #4990: <https://bugs.freedesktop.org/show_bug.cgi?id=4990> Avoid     dereferencing a NULL pointer if DRI is not enabled. (Joris van     Rantwijk)