src/via_driver.c
@@ -2292,8 +2292,8 @@ VIASwitchMode(int scrnIndex, DisplayModePtr mode, int flags)
 	ret = VIAWriteMode(pScrn, mode);
 
 #ifdef XF86DRI
-    kickVblank(pScrn);
     if (pVia->directRenderingEnabled) {
+        kickVblank(pScrn);
 	VIADRIRingBufferInit(pScrn);
 	DRIUnlock(screenInfo.screens[scrnIndex]);
     }
